--- a/angular-front/src/app/header/header.component.html
+++ b/angular-front/src/app/header/header.component.html
@@ -9,7 +9,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">List</a>
+        <a class="nav-link" routerLink="/products">List</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/product/new">Add product</a>
       </li>
     </ul>
   </div>
