--- a/lesson-04-spring-boot/src/main/resources/templates/user_form.html
+++ b/lesson-04-spring-boot/src/main/resources/templates/user_form.html
@@ -15,21 +15,7 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">EShop</a>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">List</a>
-            </li>
-        </ul>
-    </div>
+<nav th:replace="fragments/navigation.html :: navigation">
 </nav>
 
 <div class="container">
@@ -41,6 +27,16 @@
                     <label>Username</label>
                     <input type="text" class="form-control" id="name" th:field="*{username}" placeholder="Enter username">
                     <p class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" class="form-control" id="password" th:field="*{password}" placeholder="Enter password">
+                    <p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
+                </div>
+                <div class="form-group">
+                    <label>Repeat password</label>
+                    <input type="password" class="form-control" id="repeatPassword" th:field="*{repeatPassword}" placeholder="Repeat password">
+                    <p class="text-danger" th:if="${#fields.hasErrors('repeatPassword')}" th:errors="*{repeatPassword}"></p>
                 </div>
                 <div class="form-group">
                     <label>Age</label>
