--- a/lesson-04-spring-boot/src/main/resources/templates/reg_page.html
+++ b/lesson-04-spring-boot/src/main/resources/templates/reg_page.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <!-- Required meta tags -->
@@ -21,25 +21,34 @@
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
-            <form th:action="@{/login_processing}" method="post">
+            <form th:action="@{/reg}" method="post" th:object="${user}">
+                <input type="hidden" id="id" th:field="*{id}">
                 <div class="form-group">
                     <label>Username</label>
-                    <input type="text" class="form-control" id="username" name="username" placeholder="Enter username">
-                    <p class="text-danger" th:if="${param.error != null}">Incorrect login or password</p>
-                    <p class="text-success" th:if="${param.logout != null}">Logout successful</p>
+                    <input type="text" class="form-control" id="name" th:field="*{username}" placeholder="Enter username">
+                    <p class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="Enter password">
+                    <input type="password" class="form-control" id="password" th:field="*{password}" placeholder="Enter password">
+                    <p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
-                <a class="px-3" th:href="@{/reg}">Register</a>
+                <div class="form-group">
+                    <label>Repeat password</label>
+                    <input type="password" class="form-control" id="repeatPassword" th:field="*{repeatPassword}" placeholder="Repeat password">
+                    <p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
+                </div>
+                <div class="form-group">
+                    <label>Age</label>
+                    <input type="number" class="form-control" id="age" th:field="*{age}" placeholder="User age">
+                    <p class="text-danger" th:if="${#fields.hasErrors('age')}" th:errors="*{age}"></p>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
     </div>
 </div>
 
-</body>
 
 <th:block>
     <!-- Optional JavaScript -->
@@ -54,5 +63,7 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
 </th:block>
+
+</body>
 
 </html>
